force-app/src/objects/ffcmutil__ProcessLog__c.object
<CustomObject>
    <fields>
        <fullName>ffcmutil__CashMatchingHistoryLog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Matching History Log</label>
        <referenceTo>ffcmutil__CashMatchingHistoryLog__c</referenceTo>
        <relationshipLabel>Process Logs</relationshipLabel>
        <relationshipName>ProcessLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffcmutil__MatchingReferenceLog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matching Reference Log</label>
        <referenceTo>ffcmutil__MatchingReferenceLog__c</referenceTo>
        <relationshipLabel>Process Logs</relationshipLabel>
        <relationshipName>ProcessLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffcmutil__TransactionLineItemLog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Line Item Log</label>
        <referenceTo>ffcmutil__TransactionLineItemLog__c</referenceTo>
        <relationshipLabel>Process Logs</relationshipLabel>
        <relationshipName>ProcessLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Process Log</label>
    <nameField>
        <displayFormat>LOG{000000}</displayFormat>
        <label>Process Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>